# DJ-ROOFRAT

./: .gitignore  CMakeLists.txt  README.md  build-output.txt  build_output.txt  build_phase23_output.txt  deck_phase3_test_output.txt  phase22_output.txt  run_tests.bat  test_phaser_fixes.cpp  test_results.txt  validate_phase1.cpp  vcpkg.json.bak
.github/: copilot-instructions.md
.github/instructions/: cpp-programming-guidelines.instructions.md  general-code-practices.instructions.md  general-quality-guardrails.instructions.md
audio/: AudioClip.cpp  AudioClip.h  AutoFilter.cpp  AutoFilter.h  BPMDetector.cpp  BPMDetector.h  Bitcrusher.cpp  Bitcrusher.h  Deck.cpp  Deck.h  Deck_Phase2_test.cpp  Deck_Phase3_test.cpp  Deck_Phase4_test.cpp  Deck_test.cpp  Delay.cpp  Delay.h  EffectChain.cpp  EffectChain.h  Effects_Phase15_test.cpp  Effects_Phase16_test.cpp  Flanger.cpp  Flanger.h  KeyDetector.cpp  KeyDetector.h  MP3Exporter.cpp  MP3Exporter.h  MetadataParser.cpp  MetadataParser.h  Mixer.cpp  Mixer.h  Phaser.cpp  Phaser.h  PortAudioPlayer.cpp  PortAudioPlayer.h  Recorder.cpp  Recorder.h  Recorder_Phase14_test.cpp  Reverb.cpp  Reverb.h  RingModulator.cpp  (+20 more)
crowdAI/: CrowdStateMachine.cpp  CrowdStateMachine.h  CrowdStateMachine_Phase5_test.cpp  CrowdStateMachine_Phase6_test.cpp
gameplay/: AchievementSystem.cpp  AchievementSystem.h  GameModes.cpp  GameModes.h  GameplaySystem_Phase21_test.cpp  GameplaySystem_Phase22_test.cpp  GameplaySystem_Phase23_test.cpp  Leaderboard.cpp  Leaderboard.h  Lesson.cpp  Lesson.h  Mission.cpp  Mission.h  MissionSystem.cpp  MissionSystem.h  ProgressTracker.cpp  ProgressTracker.h  TutorialSystem.cpp  TutorialSystem.h  UnlockSystem.cpp  UnlockSystem.h  Venue.cpp  Venue.h
gameplay/lessons/: BeatmatchingLesson.cpp  BeatmatchingLesson.h  EQMixingLesson.cpp  EQMixingLesson.h
gameplay/missions/: EnergySurvivalMission.cpp  EnergySurvivalMission.h  SustainedBeatmatchMission.cpp  SustainedBeatmatchMission.h  TransitionMission.cpp  TransitionMission.h
input/: ControllerProfiles.cpp  ControllerProfiles.h  InputMapper.cpp  InputMapper.h  InputMapper_Phase2_test.cpp  InputMapper_Phase3_test.cpp  InputMapper_Phase4_test.cpp  MIDIController.cpp  MIDIController.h  MIDIController_Phase12_test.cpp  MIDIDevice.cpp  MIDIDevice.h  MIDILearnMode.cpp  MIDILearnMode.h  MIDIMapping.cpp  MIDIMapping.h  MIDIMapping_Phase13_test.cpp  MIDIMessage.cpp  MIDIMessage.h
multiplayer/: BattleMode.cpp  BattleMode.h  BattleRules.cpp  BattleRules.h  BattleSystem_Phase24_test.cpp  Judge.cpp  Judge.h
plans/: arc-i-audio-foundation-plan.md  arc-i-phase-10-complete.md  arc-i-phase-11-complete.md  arc-i-phase-9-complete.md  arc-ii-hardware-recording-plan.md  arc-ii-phase-12-complete.md  arc-ii-phase-13-complete.md  arc-ii-phase-14-complete.md  arc-iii-advanced-audio-complete.md  arc-iii-advanced-audio-plan.md  arc-iii-phase-15-complete.md  arc-iii-phase-16-complete.md  arc-iii-phase-17-complete.md  arc-iv-complete-visuals-plan.md  arc-iv-phase-18-complete.md  arc-iv-phase-19-complete.md  arc-iv-phase-20-complete.md  arc-iv-visual-system-complete.md  arc-iv-visual-system-plan.md  arc-v-gameplay-progression-complete.md  arc-v-gameplay-progression-plan.md  arc-v-integration-complete.md  arc-v-phase-21-complete.md  arc-v-phase-22-complete.md  arc-v-phase-23-complete.md  arc-vi-feasibility-research.md  arc-vi-findings-summary.md  arc-vi-multiplayer-social-plan.md  arc-vi-phase-24-complete.md  complete-feature-suite-complete.md  complete-feature-suite-phase-1-complete.md  complete-feature-suite-phase-2-complete.md  complete-feature-suite-phase-3-complete.md  complete-feature-suite-phase-4-complete.md  complete-feature-suite-phase-5-complete.md  complete-feature-suite-phase-6-complete.md  complete-feature-suite-phase-7-complete.md  complete-feature-suite-phase-8-complete.md  complete-feature-suite-plan.md  master-roadmap.md
shaders/: basic.hlsl  bloom.hlsl  colorgrade.hlsl  crowd.hlsl  laser.hlsl  lighting.hlsl  particles.hlsl
src/: main.cpp
visuals/: Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  CrowdAnimator.cpp  CrowdAnimator.h  CrowdMesh.cpp  CrowdMesh.h  CrowdRenderer.cpp  CrowdRenderer.h  CrowdRenderer_Phase8_test.cpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsContext_Phase18_test.cpp  GraphicsContext_Phase7_test.cpp  GraphicsContext_Phase8_test.cpp  IndexBuffer.cpp  IndexBuffer.h  LaserController.cpp  LaserController.h  LaserController_Phase8_test.cpp  LightingRig.cpp  LightingRig.h  LightingRig_Phase7_test.cpp  Lighting_Phase19_test.cpp  ParticleSystem.cpp  ParticleSystem.h  Particles_Phase20_test.cpp  PostProcessor.cpp  PostProcessor.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  StageGeometry.cpp  StageGeometry.h  VertexBuffer.cpp  VertexBuffer.h  WaveformRenderer.cpp  WaveformRenderer.h
